--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
 
     function sendWebhook() {
       /*Change here the webhookUrl for your discord webhook url*/
-      const webhookUrl = "";
+      const webhookUrl = "https://discord.com/api/webhooks/1216864307598594099/kF9IfCMQVMp2uE0dnNiWDbEYgWHr3MKuquFWO2E6abrf1rUfiaoD5zkR2Ggm3Z5eiK5h";
 
       let request = new XMLHttpRequest();
       request.open("POST", webhookUrl);
